--- a/views/pages/member/signup.pug
+++ b/views/pages/member/signup.pug
@@ -5,6 +5,8 @@ block content
   p Signup account
 
   input#key(type='hidden' value=key)
+  input#csrf(type='hidden' value=csrf)
+
   input#email(type='text' placeholder='email')
   input#password(type='text' placeholder='password')
   input#confirm(type='text' placeholder='password confirm')
